--- a/website/index.html
+++ b/website/index.html
@@ -34,7 +34,7 @@
           <a href="#" class="selected">Home</a>
           <a href="./docs/">Documentation</a>
         </div>
-        <div id="home-title"><span class="strong">Fire</span><span class="satisfy">chat</span></div>
+        <div id="home-title"><span class="strong">Fire</span><span class="satisfy" style="color: rgba(0,0,0);">chat</span></div>
         <div id="home-subtitle">Open-source real-time chat, built on Firebase</div>
       </div>
     </div>
